--- a/static/index.html
+++ b/static/index.html
@@ -16,6 +16,7 @@
     <title>Proofreading Jobs</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.4.1/react.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.4.1/react-dom.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
